Update _session.scss to fix surprise scrollbar
Big thanks to Jeisson Neira, Konnor Rogers, and Andrew White for the help!

--- a/_sass/world/2024/modules/_session.scss
+++ b/_sass/world/2024/modules/_session.scss
@@ -29,7 +29,9 @@
             color: white;
             font-size: 1.7rem;
             text-wrap: nowrap;
-            overflow: scroll;
+            overflow: auto;
+            max-width: 100%;
+            min-width: max-content;
 
             p {
                 font-weight: 800;
